# LineAgent

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  easypanel.json
.claude/skills/lineagent/: SKILL.md
.github/workflows/: ci.yml
docs/: api.md  cli.md  mcp.md
docs/superpowers/plans/: 2026-06-10-lineagent.md
docs/superpowers/specs/: 2026-06-10-lineagent-design.md
migrations/: 0001_init.sql
scripts/: import_dra_cycle2.py  install.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: dto.rs  extract.rs  handlers.rs  mod.rs
src/auth/: api_key.rs  middleware.rs  mod.rs  password.rs  user.rs
src/cli/: client.rs  config.rs  mod.rs  output.rs
src/cli/commands/: comments.rs  cycles.rs  import.rs  keys.rs  misc.rs  mod.rs  projects.rs  relations.rs  tickets.rs  user.rs
src/core/: comment.rs  cycle.rs  index.rs  mod.rs  project.rs  relation.rs  search.rs  ticket.rs  validate.rs
src/mcp/: mod.rs  proxy.rs  resources.rs  tools.rs
src/notify/: slack.rs
src/storage/: api_key_repo.rs  comment_repo.rs  cycle_repo.rs  event_repo.rs  mod.rs  pool.rs  project_repo.rs  relation_repo.rs  ticket_repo.rs  user_repo.rs
tests/: api_integration.rs  boot.rs  cli_e2e.rs  config.rs  core_misc.rs  core_project.rs  core_search.rs  core_ticket.rs  mcp_stdio.rs  storage_misc.rs  storage_project.rs  storage_ticket.rs
